--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "server.js"
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.0",
     "express": "^4.15.2",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
@@ -23,5 +24,11 @@
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-hot-middleware": "^2.18.0"
+  },
+  "dependencies": {
+    "react-dnd": "^2.3.0",
+    "react-dnd-html5-backend": "^2.3.0",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0"
   }
 }
