--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.15.2",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
