--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.5.4",
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
