--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "start-server": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0",
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
@@ -37,6 +39,7 @@
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "socket.io": "^1.7.3",
     "uuid": "^3.0.1"
   }
 }
