--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
-    "start-server": "nodemon server/server.js"
+    "start": "nodemon --watch server ./server/server.js"
   },
   "author": "",
   "license": "ISC",
