--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^15.5.4",
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
